<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17365D">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="2dp"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/unameETID"
                    style="@style/text_editbox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edit_text_bottom_border"
                    android:ems="10"
                    android:hint="@string/reg_Name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="#FFF"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eemailETID"
                    style="@style/text_editbox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/unameETID"
                    android:background="@drawable/edit_text_bottom_border"
                    android:ems="10"
                    android:hint="@string/reg_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    android:singleLine="true"
                    android:textColor="#FFF"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phoneNumETID"
                    style="@style/text_editbox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/eemailETID"
                    android:background="@drawable/edit_text_bottom_border"
                    android:ems="10"
                    android:hint="@string/reg_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="#FFF"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_refferal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/referralCodeETID"
                    style="@style/text_editbox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_below="@+id/phoneNumETID"
                    android:background="@drawable/edit_text_bottom_border"
                    android:ems="10"
                    android:hint="@string/reg_referral_code"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="#FFF"
                    android:textColorHint="@color/grey"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/registerBtnID"
                style="@style/text_editbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/referralCodeETID"
                android:layout_marginTop="20dp"
                android:background="@drawable/hari_stylished_button"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/reg_btn_text"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/existingUserBtnID"
                style="@style/text_editbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerBtnID"
                android:layout_marginTop="20dp"
                android:background="@drawable/hari_stylished_button"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/exist_user_btn_text"
                android:textAllCaps="true"
                android:textColor="#FFF" />

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>